openshift-console/deployments.apps.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      console.openshift.io/console-config-version: "26014"
      console.openshift.io/image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:eae9114b14071c50a1996b95eccf6fad8df53c5cc689dce069dec466413430d4
      console.openshift.io/infrastructure-config-version: "598"
      console.openshift.io/oauth-secret-version: "26045"
      console.openshift.io/oauth-serving-cert-config-version: "25885"
      console.openshift.io/proxy-config-version: "619"
      console.openshift.io/service-ca-config-version: "369058411"
      console.openshift.io/trusted-ca-config-version: "26020"
      deployment.kubernetes.io/revision: "3"
      operator.openshift.io/spec-hash: 3e28fb7f84436728b27d5276b7f0bf66ad105d20b15436e57233e1ed67d2598f
    creationTimestamp: "2023-05-04T21:53:36Z"
    generation: 3
    labels:
      app: console
      component: ui
    name: console
    namespace: openshift-console
    resourceVersion: "369059612"
    uid: 2c3bd000-c0eb-4cf9-9e59-4449bedae7a5
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: console
        component: ui
    strategy:
      rollingUpdate:
        maxSurge: 3
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        annotations:
          console.openshift.io/console-config-version: "26014"
          console.openshift.io/image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:eae9114b14071c50a1996b95eccf6fad8df53c5cc689dce069dec466413430d4
          console.openshift.io/infrastructure-config-version: "598"
          console.openshift.io/oauth-secret-version: "26045"
          console.openshift.io/oauth-serving-cert-config-version: "25885"
          console.openshift.io/proxy-config-version: "619"
          console.openshift.io/service-ca-config-version: "369058411"
          console.openshift.io/trusted-ca-config-version: "26020"
          target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        creationTimestamp: null
        labels:
          app: console
          component: ui
        name: console
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: component
                  operator: In
                  values:
                  - ui
              topologyKey: kubernetes.io/hostname
        containers:
        - command:
          - /opt/bridge/bin/bridge
          - --public-dir=/opt/bridge/static
          - --config=/var/console-config/console-config.yaml
          - --service-ca-file=/var/service-ca/service-ca.crt
          - --v=2
          image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:eae9114b14071c50a1996b95eccf6fad8df53c5cc689dce069dec466413430d4
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - sleep
                - "25"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 150
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: console
          ports:
          - containerPort: 8443
            name: https
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8443
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
          - mountPath: /var/serving-cert
            name: console-serving-cert
            readOnly: true
          - mountPath: /var/oauth-config
            name: console-oauth-config
            readOnly: true
          - mountPath: /var/console-config
            name: console-config
            readOnly: true
          - mountPath: /var/service-ca
            name: service-ca
            readOnly: true
          - mountPath: /var/oauth-serving-cert
            name: oauth-serving-cert
            readOnly: true
          - mountPath: /etc/pki/ca-trust/extracted/pem
            name: trusted-ca-bundle
            readOnly: true
        dnsPolicy: ClusterFirst
        nodeSelector:
          node-role.kubernetes.io/master: ""
        priorityClassName: system-cluster-critical
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: console
        serviceAccountName: console
        terminationGracePeriodSeconds: 40
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-reachable
          operator: Exists
          tolerationSeconds: 120
        volumes:
        - name: console-serving-cert
          secret:
            defaultMode: 420
            secretName: console-serving-cert
        - name: console-oauth-config
          secret:
            defaultMode: 420
            secretName: console-oauth-config
        - configMap:
            defaultMode: 420
            name: console-config
          name: console-config
        - configMap:
            defaultMode: 420
            name: service-ca
          name: service-ca
        - configMap:
            defaultMode: 420
            name: oauth-serving-cert
          name: oauth-serving-cert
        - configMap:
            defaultMode: 420
            items:
            - key: ca-bundle.crt
              path: tls-ca-bundle.pem
            name: trusted-ca-bundle
          name: trusted-ca-bundle
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2023-05-11T18:26:42Z"
      lastUpdateTime: "2023-05-11T18:26:42Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-05-04T21:53:36Z"
      lastUpdateTime: "2024-06-02T21:41:24Z"
      message: ReplicaSet "console-6fbdbf6498" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      operator.openshift.io/spec-hash: 374a678e52c6eb40ee8e63b4a85a82b1c34c7fd3b13a240192c0f3b017f7cda1
    creationTimestamp: "2023-05-04T21:53:32Z"
    generation: 1
    labels:
      app: console
      component: downloads
    name: downloads
    namespace: openshift-console
    resourceVersion: "425755085"
    uid: 5b10e48b-c0c8-4752-a33c-728ac669d655
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: console
        component: downloads
    strategy:
      rollingUpdate:
        maxSurge: 3
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        annotations:
          target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        creationTimestamp: null
        labels:
          app: console
          component: downloads
        name: downloads
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: component
                  operator: In
                  values:
                  - downloads
              topologyKey: kubernetes.io/hostname
        containers:
        - args:
          - -c
          - "cat <<EOF >>/tmp/serve.py\nimport errno, http.server, os, re, signal,
            socket, sys, tarfile, tempfile, threading, time, zipfile\n\nsignal.signal(signal.SIGTERM,
            lambda signum, frame: sys.exit(0))\n\ndef write_index(path, message):\n
            \ with open(path, 'wb') as f:\n    f.write('\\n'.join([\n      '<!doctype
            html>',\n      '<html lang=\"en\">',\n      '<head>',\n      '  <meta
            charset=\"utf-8\">',\n      '</head>',\n      '<body>',\n      '  {}'.format(message),\n
            \     '</body>',\n      '</html>',\n      '',\n    ]).encode('utf-8'))\n\n#
            Launch multiple listeners as threads\nclass Thread(threading.Thread):\n
            \ def __init__(self, i, socket):\n    threading.Thread.__init__(self)\n
            \   self.i = i\n    self.socket = socket\n    self.daemon = True\n    self.start()\n\n
            \ def run(self):\n    server = http.server.SimpleHTTPRequestHandler\n
            \   server.server_version = \"OpenShift Downloads Server\"\n    server.sys_version
            = \"\"\n    httpd = http.server.HTTPServer(addr, server, False)\n\n    #
            Prevent the HTTP server from re-binding every handler.\n    # https://stackoverflow.com/questions/46210672/\n
            \   httpd.socket = self.socket\n    httpd.server_bind = self.server_close
            = lambda self: None\n\n    httpd.serve_forever()\n\ntemp_dir = tempfile.mkdtemp()\nprint('serving
            from {}'.format(temp_dir))\nos.chdir(temp_dir)\nfor arch in ['amd64',
            'arm64', 'ppc64le', 's390x']:\n  os.mkdir(arch)\ncontent = ['<a href=\"oc-license\">license</a>']\nos.symlink('/usr/share/openshift/LICENSE',
            'oc-license')\n\nfor arch, operating_system, path in [\n    ('amd64',
            'linux', '/usr/share/openshift/linux_amd64/oc'),\n    ('amd64', 'mac',
            '/usr/share/openshift/mac/oc'),\n    ('amd64', 'windows', '/usr/share/openshift/windows/oc.exe'),\n
            \   ('arm64', 'linux', '/usr/share/openshift/linux_arm64/oc'),\n    ('arm64',
            'mac', '/usr/share/openshift/mac_arm64/oc'),\n    ('ppc64le', 'linux',
            '/usr/share/openshift/linux_ppc64le/oc'),\n    ('s390x', 'linux', '/usr/share/openshift/linux_s390x/oc'),\n
            \   ]:\n  basename = os.path.basename(path)\n  target_path = os.path.join(arch,
            operating_system, basename)\n  os.mkdir(os.path.join(arch, operating_system))\n
            \ os.symlink(path, target_path)\n  base_root, _ = os.path.splitext(basename)\n
            \ archive_path_root = os.path.join(arch, operating_system, base_root)\n
            \ with tarfile.open('{}.tar'.format(archive_path_root), 'w') as tar:\n
            \   tar.add(path, basename)\n  with zipfile.ZipFile('{}.zip'.format(archive_path_root),
            'w') as zip:\n    zip.write(path, basename)\n  content.append('<a href=\"{0}\">oc
            ({1} {2})</a> (<a href=\"{0}.tar\">tar</a> <a href=\"{0}.zip\">zip</a>)'.format(target_path,
            arch, operating_system))\n\nfor root, directories, filenames in os.walk(temp_dir):\n
            \ root_link = os.path.relpath(temp_dir, os.path.join(root, 'child')).replace(os.path.sep,
            '/')\n  for directory in directories:\n    write_index(\n      path=os.path.join(root,
            directory, 'index.html'),\n      message='<p>Directory listings are disabled.
            \ See <a href=\"{}\">here</a> for available content.</p>'.format(root_link),\n
            \   )\n\nwrite_index(\n  path=os.path.join(temp_dir, 'index.html'),\n
            \ message='\\n'.join(\n    ['<ul>'] +\n    ['  <li>{}</li>'.format(entry)
            for entry in content] +\n    ['</ul>']\n  ),\n)\n\n# Create socket\n#
            IPv6 should handle IPv4 passively so long as it is not bound to a\n# specific
            address or set to IPv6_ONLY\n# https://stackoverflow.com/questions/25817848/python-3-does-http-server-support-ipv6\ntry:\n
            \ addr = ('::', 8080)\n  sock = socket.socket(socket.AF_INET6, socket.SOCK_STREAM)\nexcept
            socket.error as err:\n  # errno.EAFNOSUPPORT is \"socket.error: [Errno
            97] Address family not supported by protocol\"\n  # When IPv6 is disabled,
            socket will bind using IPv4.\n  if err.errno == errno.EAFNOSUPPORT:\n
            \   addr = ('', 8080)\n    sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n
            \ else:\n    raise    \nsock.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR,
            1)\nsock.bind(addr)\nsock.listen(5)\n\n[Thread(i, socket=sock) for i in
            range(100)]\ntime.sleep(9e9)\nEOF\nexec python3 /tmp/serve.py\n"
          command:
          - /bin/sh
          image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:ade57a60744eaf9a5f64f9cbb1d0043be90ebffac72e5bb43df7832dfd860b2f
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: download-server
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: FallbackToLogsOnError
        dnsPolicy: ClusterFirst
        nodeSelector:
          kubernetes.io/os: linux
        priorityClassName: system-cluster-critical
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 0
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-reachable
          operator: Exists
          tolerationSeconds: 120
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2023-05-04T21:53:32Z"
      lastUpdateTime: "2023-05-04T21:54:02Z"
      message: ReplicaSet "downloads-7dc8c885d8" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-05-11T18:26:32Z"
      lastUpdateTime: "2023-05-11T18:26:32Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
