openshift-console/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-06-02T21:41:24Z"
    creationTimestamp: "2023-05-04T21:53:32Z"
    labels:
      app: console
    name: console
    namespace: openshift-console
    resourceVersion: "369059609"
    uid: b64f87da-634f-4d07-8c78-728af01811a4
  subsets:
  - addresses:
    - ip: 10.129.0.207
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: console-6fbdbf6498-xcw6l
        namespace: openshift-console
        resourceVersion: "369058634"
        uid: b506e6fb-4595-4d1d-a978-d49b5698e854
    - ip: 10.130.1.52
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: console-6fbdbf6498-ngnf6
        namespace: openshift-console
        resourceVersion: "369059607"
        uid: 2492db8e-36c0-4ce9-92d1-0588d3c6d464
    ports:
    - name: https
      port: 8443
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-06-30T06:25:09Z"
    creationTimestamp: "2023-05-04T21:53:32Z"
    name: downloads
    namespace: openshift-console
    resourceVersion: "425755083"
    uid: dfd6aff9-1c22-41b9-8697-d939c334c458
  subsets:
  - addresses:
    - ip: 10.129.0.3
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: downloads-7dc8c885d8-xv7kf
        namespace: openshift-console
        resourceVersion: "1607294"
        uid: 3e08cfe0-dbb3-433f-85d6-cfa5d37617dc
    - ip: 10.130.1.85
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: downloads-7dc8c885d8-lfjlc
        namespace: openshift-console
        resourceVersion: "425755079"
        uid: b9cb4fbe-d4bc-4d56-8233-8ff7f9f8f829
    ports:
    - name: http
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
