openshift-console/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.0.207
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-0
    targetRef:
      kind: Pod
      name: console-6fbdbf6498-xcw6l
      namespace: openshift-console
      resourceVersion: "369058634"
      uid: b506e6fb-4595-4d1d-a978-d49b5698e854
    zone: brazilsouth-1
  - addresses:
    - 10.130.1.52
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-1
    targetRef:
      kind: Pod
      name: console-6fbdbf6498-ngnf6
      namespace: openshift-console
      resourceVersion: "369059607"
      uid: 2492db8e-36c0-4ce9-92d1-0588d3c6d464
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-04T21:53:32Z"
    generateName: console-
    generation: 44
    labels:
      app: console
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: console
    name: console-ktjpj
    namespace: openshift-console
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: console
      uid: 9dc5577d-3c1c-4679-b76d-504cb9b1e5ef
    resourceVersion: "369059651"
    uid: 47f9f448-4c8f-43d0-bddf-619b5dfd8539
  ports:
  - name: https
    port: 8443
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.0.3
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-0
    targetRef:
      kind: Pod
      name: downloads-7dc8c885d8-xv7kf
      namespace: openshift-console
      resourceVersion: "1607294"
      uid: 3e08cfe0-dbb3-433f-85d6-cfa5d37617dc
    zone: brazilsouth-1
  - addresses:
    - 10.130.1.85
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-1
    targetRef:
      kind: Pod
      name: downloads-7dc8c885d8-lfjlc
      namespace: openshift-console
      resourceVersion: "425755079"
      uid: b9cb4fbe-d4bc-4d56-8233-8ff7f9f8f829
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-06-30T06:25:09Z"
    creationTimestamp: "2023-05-04T21:53:32Z"
    generateName: downloads-
    generation: 33
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: downloads
    name: downloads-klwth
    namespace: openshift-console
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: downloads
      uid: a7f5e185-b3bb-4d61-b6fc-f6633fb58802
    resourceVersion: "425755081"
    uid: 68d48deb-baf9-45e5-83b0-56c0f4f1b662
  ports:
  - name: http
    port: 8080
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
