openshift-console/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
      service.beta.openshift.io/serving-cert-secret-name: console-serving-cert
      service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
    creationTimestamp: "2023-05-04T21:53:32Z"
    labels:
      app: console
    name: console
    namespace: openshift-console
    resourceVersion: "25989"
    uid: 9dc5577d-3c1c-4679-b76d-504cb9b1e5ef
  spec:
    clusterIP: 172.30.47.105
    clusterIPs:
    - 172.30.47.105
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    selector:
      app: console
      component: ui
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2023-05-04T21:53:32Z"
    name: downloads
    namespace: openshift-console
    resourceVersion: "25921"
    uid: a7f5e185-b3bb-4d61-b6fc-f6633fb58802
  spec:
    clusterIP: 172.30.64.122
    clusterIPs:
    - 172.30.64.122
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: console
      component: downloads
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
